# ncs

./: .~lock.похожие тексты.xlsx#  1.c  2.c  3.c  4.c  NCS.py  README.md  base.csv  base_test.csv  binary.c  collect_database.py  gensim example.ipynb  get_query.py  make_query.py  ncs.py  new_file.csv  nframs_test.ipynb  ngrams_test.ipynb  preprocess.py  pyproject.toml  test_normalize.ipynb  to_search_for.csv  похожие тексты.xlsx
data/: base.csv  to_search_for.csv
task/: binary_metrics.json  task.txt
trash/: function_metrics.json  test.ipynb  text8  to_search_for.csv  tokenizer.ipynb  tokens  vectors.txt
